--- a/02_UniFrac_BetaDiversity.ipynb
+++ b/02_UniFrac_BetaDiversity.ipynb
@@ -95,6 +95,140 @@
     "\n",
     "In this session, we will analyze beta diversity patterns in the EMP500 shotgun metagenomics dataset using **phylogenetically-informed methods**:\n",
     "\n",
+    "### What is Diversity?\n",
+    "\n",
+    "**Species diversity** refers to both the **number of species** in a given environment and how individuals are **distributed** among them. Once the taxonomic composition of our metagenomes is known, we can analyze diversity to understand community structure. The two main types of diversity metrics are **α-diversity** (**within a sample**) and **β-diversity** (**between samples**).\n",
+    "\n",
+    "#### α-Diversity\n",
+    "\n",
+    "Describes the diversity within a single metagenome or environment. It has two main components:\n",
+    "\n",
+    "* **Richness**: The number of different species present.\n",
+    "* **Evenness**: How evenly individuals are distributed among those species.\n",
+    "\n",
+    "For example, a community with four species, each equally abundant, has high evenness. In contrast, if one species dominates while others are rare, evenness is low.\n",
+    "\n",
+    "Several indices are used to quantify α-diversity, including:\n",
+    "\n",
+    "* **Shannon Index** – sensitive to both richness and evenness.\n",
+    "* **Simpson Index** – gives more weight to abundant species.\n",
+    "* **Chao1** – estimates true richness, accounting for unseen rare species.\n",
+    "\n",
+    "![Fishes in 3 lakes](https://carpentries-lab.github.io/metagenomics-analysis/fig/03-08-01.png)\n",
+    "*Figure 1*. Alpha diversity is calculated according to fish diversity in a pond. Here, α diversity is represented in its simplest way: Richness.\n",
+    "\n",
+    "To learn more about alpha diversity we will explore an application from the [Museo virtual de matemáticas](https://mumat.matcuer.unam.mx/)\n",
+    "<img src=\"https://mumat.matcuer.unam.mx/img/circulo.png\" width=\"15\" height=\"15\">. Add or remove elements of the population to find a maximum for the alpha diversity (5 min)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"800\"\n",
+       "            src=\"https://mumat.matcuer.unam.mx/apps/biomat/diversidad/#/intro)\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7b99643d2e40>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import IFrame\n",
+    "IFrame(src=\"https://mumat.matcuer.unam.mx/apps/biomat/diversidad/#/intro)\", width='100%', height=800)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### β-Diversity\n",
+    "\n",
+    "Measures the differences in species composition between metagenomes. It helps us compare how similar or different communities are across samples or conditions.\n",
+    "\n",
+    "Common methods to evaluate β-diversity include:\n",
+    "\n",
+    "* **Bray–Curtis dissimilarity** – considers both presence and abundance.\n",
+    "* **Jaccard index** – based only on species presence/absence.\n",
+    "* **UniFrac** (weighted/unweighted) – incorporates phylogenetic information.\n",
+    "\n",
+    "In the following example, we will explore the **α- and β-diversity** components of a fish dataset collected from three different lakes.\n",
+    "\n",
+    "A simple way to estimate **β-diversity** is to count the number of species that are unique between two sites. Let’s compare **Lake A** and **Lake B**:\n",
+    "\n",
+    "* **Lake A** contains **3 species**.\n",
+    "* Out of these, **2 species** are also found in **Lake B**, meaning they are shared.\n",
+    "* Therefore, the number of species unique to **Lake A** (relative to **Lake B**) is: `3 (total in A) − 2 (shared) = 1`.\n",
+    "\n",
+    "Now, we do the same for **Lake B**:\n",
+    "\n",
+    "* **Lake B** also has 3 species, with **2 shared** with **Lake A**.\n",
+    "* So, the number of species unique to **Lake B** is also: `3 (total in B) − 2 (shared) = 1`.\n",
+    "\n",
+    "To estimate **β-diversity** between **Lake A** and **Lake B**, we sum the unique species from both sides:\n",
+    "\n",
+    "**β-diversity = (3−2) + (3−2) = 2**\n",
+    "\n",
+    "This method can be repeated for each pair of lakes to assess how species composition varies across the system.\n",
+    "\n",
+    "![Fish alpha and beta diversity](https://carpentries-lab.github.io/metagenomics-analysis/fig/03-08-02.png)   \n",
+    "*Figure 2*. Alpha and beta diversity indexes of fishes in a pond.\n",
+    "\n",
+    "*Exercise 1*: Calculate the α- and β-diversity of the following example:\n",
+    "\n",
+    "<img src=\"https://carpentries-lab.github.io/metagenomics-analysis/fig/03-08-03.png\" width=\"800\" height=\"400\">.\n",
+    "\n",
+    "Which of the following options correctly represents the **alpha diversity** in **Lakes A** and *B*, and the **beta diversity between them**, respectively?\n",
+    "\n",
+    "* **a)** 4, 3, 1\n",
+    "* **b)** 4, 3, 5\n",
+    "* **c)** 9, 7, 16\n",
+    "\n",
+    "<details> <summary>Click here to see the solution</summary>\n",
+    "\n",
+    "Correct answer: **b)** 4, 3, 5\n",
+    "\n",
+    "**Explanation**:\n",
+    "\n",
+    "Alpha diversity refers to the **number of different** species within a single environment:\n",
+    "\n",
+    "* **Lake A** has 4 different species → α-diversity = 4\n",
+    "* **Lake B** has 3 different species → α-diversity = 3\n",
+    "\n",
+    "Beta diversity measures the difference in species composition between environments.\n",
+    "To calculate it, we subtract the number of shared species from the total species in each lake, and then sum the differences:\n",
+    "\n",
+    "* **Shared species** between Lake A and B: 1\n",
+    "* **Unique species** in Lake A: 4 − 1 = 3\n",
+    "* **Unique species** in Lake B: 3 − 1 = 2\n",
+    "\n",
+    "    **β-diversity** = 3 + 2 = 5\n",
+    "\n",
+    "</details>\n",
+    "\n",
+    "These images are from the [Metagenomics Workshop](https://carpentries-lab.github.io/metagenomics-workshop/) from the carpentries Incubator were you can learn all the steps from the begining how to clean and process shotgun metagenomes to explore the data. Following a real case about 4 Ciénegas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### UniFrac Analysis\n",
     "\n",
     "- **Metric**: We will employ UniFrac, a gold-standard phylogenetic beta diversity measure that:\n",
@@ -118,8 +252,7 @@
     "\n",
     "To demonstrate scikit-bio's capabilities, we will:\n",
     "- **Mantel Test**: Evaluate matrix correlations between phylum-specific distance matrices  \n",
-    "- **Procrustes Analysis**: Quantify concordance between ordinations of different microbial groups  \n",
-    "\n"
+    "- **Procrustes Analysis**: Quantify concordance between ordinations of different microbial groups  "
    ]
   },
   {
